--- a/deploy_code/project/templates/team.html
+++ b/deploy_code/project/templates/team.html
@@ -58,7 +58,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -79,7 +80,8 @@
                         <p class="card-text">
                             Back-end Developer.</br>
                             Specialises in Python, JavaScript and Lua.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -100,7 +102,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -121,7 +124,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -149,7 +153,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -170,7 +175,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -191,7 +197,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -212,7 +219,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -240,7 +248,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -261,7 +270,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -282,7 +292,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
@@ -303,7 +314,8 @@
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content.</br>
-                            <a class="more_info" href="{{ url_for('main.profile', name='hubert') }}"> More Info.</a>
+                            <a class="more_info" href="{{ url_for('main.profile', fname='hubert', lname='swic') }}">
+                                More Info.</a>
                         </p>
                     </div>
                     <div class="card-footer">
